#138982: Updates requested by Michelle

--- a/projects/picker/src/lib/date-time/calendar-month-view.component.html
+++ b/projects/picker/src/lib/date-time/calendar-month-view.component.html
@@ -21,7 +21,7 @@
            (select)="selectCalendarCell($event)">
     </tbody>
 </table>
-<div class="month-buttons">
+<div class="month-buttons" *ngIf="showMonth">
     <button class="owl-dt-control-button default cancel" (click) = "cancel($event)">
         Cancel
     </button>
