--- a/projects/picker/src/lib/date-time/calendar.component.html
+++ b/projects/picker/src/lib/date-time/calendar.component.html
@@ -73,6 +73,7 @@
             [selectMode]="selectMode"
             [minDate]="minDate"
             [maxDate]="maxDate"
+            [showMonth]="showMonth"
             [dateFilter]="dateFilter"
             [hideOtherMonths]="hideOtherMonths"
             (pickerMomentChange)="handlePickerMomentChange($event)"
