--- a/projects/picker/src/lib/date-time/date-time-picker-container.component.html
+++ b/projects/picker/src/lib/date-time/date-time-picker-container.component.html
@@ -14,6 +14,7 @@
             [maxDate]="picker.maxDateTime"
             [dateFilter]="picker.dateTimeFilter"
             [startView]="picker.startView"
+            [showMonth]="pickerType === 'calendar'"
             [hideOtherMonths]="picker.hideOtherMonths"
             (yearSelected)="picker.selectYear($event)"
             (monthSelected)="picker.selectMonth($event)"
