--- a/projects/picker/src/sass/picker.scss
+++ b/projects/picker/src/sass/picker.scss
@@ -320,8 +320,8 @@ $theme-color: #3f51b5;
   :not(.owl-dt-calendar-cell-disabled):hover > .owl-dt-calendar-cell-content:not(.owl-dt-calendar-cell-selected) {
 
     &:not(.owl-dt-calendar-cell-today) {
-      background-color: #538ec0;
-      color: #ffffff;
+      background-color: #f5f5f5;
+      color: black;
     }
   }
 
@@ -377,6 +377,7 @@ $theme-color: #3f51b5;
     outline: medium none;
     font-size: 1.2em;
     padding: .2em;
+    -webkit-appearance: none;
   }
 }
 
