Change am/pm to lowercase. Remove month/year view access and limit input to #s only

--- a/projects/picker/src/sass/picker.scss
+++ b/projects/picker/src/sass/picker.scss
@@ -437,6 +437,10 @@ $theme-color: #3f51b5;
   }
 }
 
+.month-year-controls {
+  cursor: none;
+}
+
 .owl-dt-control-period-button {
   .owl-dt-control-button-content {
     height: 1.5em;
