--- a/projects/picker/src/lib/date-time/calendar.component.html
+++ b/projects/picker/src/lib/date-time/calendar.component.html
@@ -18,10 +18,9 @@
         </span>
     </button>
     <div class="owl-dt-calendar-control-content">
-        <button class="owl-dt-control owl-dt-control-button owl-dt-control-period-button"
+        <div
                 type="button" tabindex="0"
-                [attr.aria-label]="periodButtonLabel"
-                (click)="toggleViews()">
+                [attr.aria-label]="periodButtonLabel">
             <span class="owl-dt-control-content owl-dt-control-button-content" tabindex="-1">
                 {{periodButtonText}}
 
@@ -42,7 +41,7 @@
                 </span> 
                 -->
             </span>
-        </button>
+        </div>
     </div>
     <button class="owl-dt-control owl-dt-control-button owl-dt-control-arrow-button"
             type="button" tabindex="0"
