--- a/projects/picker/src/lib/date-time/calendar-body.component.html
+++ b/projects/picker/src/lib/date-time/calendar-body.component.html
@@ -1,6 +1,7 @@
 <tr *ngFor="let row of rows; let rowIndex = index" role="row">
-    <td *ngFor="let item of row; let colIndex = index"
-        class="owl-dt-calendar-cell {{item.cellClass}}"
+    <td
+        *ngFor="let item of row; let colIndex = index"
+        class="owl-dt-calendar-cell {{ item.cellClass }}"
         [tabindex]="isActiveCell(rowIndex, colIndex) ? 0 : -1"
         [class.owl-dt-calendar-cell-disabled]="!item.enabled || item.out"
         [class.owl-dt-calendar-cell-in-range]="isInRange(item.value)"
@@ -9,15 +10,18 @@
         [attr.aria-label]="item.ariaLabel"
         [attr.aria-disabled]="!item.enabled || null"
         [style.width.%]="100 / numCols"
-        [style.paddingTop.%]="50 * cellRatio / numCols"
-        [style.paddingBottom.%]="50 * cellRatio / numCols"
-        (click)="selectCell(item)">
-        <span class="owl-dt-calendar-cell-content"
-              [ngClass]="{
+        [style.paddingTop.%]="(50 * cellRatio) / numCols"
+        [style.paddingBottom.%]="(50 * cellRatio) / numCols"
+        (click)="selectCell(item)"
+    >
+        <span
+            class="owl-dt-calendar-cell-content"
+            [ngClass]="{
                 'owl-dt-calendar-cell-today': item.value === todayValue,
                 'owl-dt-calendar-cell-selected': isSelected(item.value)
-              }">
-            {{item.displayValue}}
+            }"
+        >
+            {{ item.displayValue }}
         </span>
     </td>
 </tr>
