change button label/alignment;

--- a/projects/picker/src/lib/date-time/calendar-month-view.component.html
+++ b/projects/picker/src/lib/date-time/calendar-month-view.component.html
@@ -44,6 +44,6 @@
         class="owl-dt-control-button primary select"
         (click)="selectDate(selectedDay)"
     >
-        Select Date
+        Set
     </button>
 </div>
