--- a/projects/picker/src/lib/date-time/calendar-month-view.component.scss
+++ b/projects/picker/src/lib/date-time/calendar-month-view.component.scss
@@ -1,8 +1,13 @@
-.cancel, .select {
+.cancel,
+.select {
     width: 48%;
 }
 
 .month-buttons {
-    text-align: center;
+    /// Kai >>>
+    // text-align: center;
+    display: flex;
+    justify-content: space-between;
+    /// Kai <<<
     margin-top: 10px;
 }
