fix a js error and set min height for arrow button

--- a/projects/picker/src/sass/picker.scss
+++ b/projects/picker/src/sass/picker.scss
@@ -436,6 +436,7 @@ $theme-color: #3f51b5;
   font-size: 1em;
   color: inherit;
   min-width: 50px;
+  min-height: 48px; // Cetaris style
 
   .owl-dt-control-button-content {
     position: relative;
